[gd_scene load_steps=21 format=2]

[ext_resource path="res://Sprite/ghostbuster1-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Sprite/ghostbustershadow.png" type="Texture" id=2]
[ext_resource path="res://GhostBuster/GhostBuster.gd" type="Script" id=3]
[ext_resource path="res://Sprite/lightbuster.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Light.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Floor.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "WalkDown"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=13]
resource_name = "WalkDownLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "WalkDownRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "WalkLeft"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "WalkRight"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
resource_name = "WalkUpLeft"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkUpRight"
length = 0.45
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CapsuleShape2D" id=9]
radius = 4.28166
height = 0.0

[sub_resource type="Curve" id=16]
_data = [ Vector2( 0, 0.127273 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.57922, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=14]
radius = 24.3311

[sub_resource type="CircleShape2D" id=15]
radius = 128.0

[node name="GhostBuster" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 12 )
scale = Vector2( 4.88, 4.88 )
texture = ExtResource( 6 )

[node name="Shadow" type="Sprite" parent="."]
light_mask = 4
position = Vector2( 0, 13 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 4
texture = ExtResource( 1 )
hframes = 33

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/WalkDown = SubResource( 4 )
anims/WalkDownLeft = SubResource( 13 )
anims/WalkDownRight = SubResource( 5 )
anims/WalkLeft = SubResource( 11 )
anims/WalkRight = SubResource( 2 )
anims/WalkUp = SubResource( 6 )
anims/WalkUpLeft = SubResource( 12 )
anims/WalkUpRight = SubResource( 7 )
anims/idle = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.06581e-14, 12 )
rotation = 1.5708
scale = Vector2( 0.467109, 0.945124 )
shape = SubResource( 9 )

[node name="Light2D3" type="Light2D" parent="."]
light_mask = 9
position = Vector2( 0, 13.0313 )
scale = Vector2( 1, 0.953125 )
z_index = 2
texture = ExtResource( 4 )
offset = Vector2( 0, -42 )
color = Color( 0.670588, 0.623529, 1, 1 )
mode = 2
range_height = 124.6
range_item_cull_mask = 9
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 31.2
shadow_item_cull_mask = 9

[node name="AreaGhostLight" type="Area2D" parent="Light2D3"]
rotation = -1.5708
collision_layer = 0
collision_mask = 8
monitorable = false
priority = 4.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Light2D3/AreaGhostLight"]
modulate = Color( 1, 1, 1, 0.623529 )
light_mask = 0
position = Vector2( 1.71752, 0 )
scale = Vector2( 1.07156, 1.14262 )
polygon = PoolVector2Array( 0, 0, 80, -40, 80, 40 )

[node name="GunParticles" type="CPUParticles2D" parent="Light2D3"]
emitting = false
amount = 30
lifetime = 2.31
speed_scale = 2.21
direction = Vector2( 0, -1 )
spread = 30.23
gravity = Vector2( 0, 0 )
initial_velocity = 122.72
radial_accel = -100.0
scale_amount = 1.89
scale_amount_curve = SubResource( 16 )

[node name="Light2D2" type="Light2D" parent="."]
light_mask = 13
position = Vector2( 0, 13 )
texture = ExtResource( 5 )
texture_scale = 0.63
color = Color( 0.670588, 0.623529, 1, 1 )
mode = 2
range_height = 563.7
range_item_cull_mask = 5

[node name="RayGhost" type="RayCast2D" parent="."]
position = Vector2( 0, 12 )
enabled = true
cast_to = Vector2( 80, 0 )
collision_mask = 9
collide_with_areas = true

[node name="Timer" type="Timer" parent="RayGhost"]
wait_time = 0.5

[node name="Ray" type="Node2D" parent="."]
position = Vector2( 0, 12 )

[node name="RayUp" type="RayCast2D" parent="Ray"]
position = Vector2( 0, -4.05373e-07 )
enabled = true
cast_to = Vector2( 15, -9 )
collision_mask = 2

[node name="RayDown" type="RayCast2D" parent="Ray"]
position = Vector2( 0, 5.48302e-07 )
enabled = true
cast_to = Vector2( 15, 9 )
collision_mask = 2

[node name="RotateTimer" type="Timer" parent="Ray"]

[node name="CloseArea" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.101961 )
position = Vector2( 0, 12 )
collision_layer = 8
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseArea"]
shape = SubResource( 14 )

[node name="GhostDetect" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.101961 )
collision_layer = 0
collision_mask = 8
monitorable = false
priority = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GhostDetect"]
position = Vector2( 0, 16 )
shape = SubResource( 15 )

[connection signal="body_entered" from="Light2D3/AreaGhostLight" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Light2D3/AreaGhostLight" to="." method="_on_AreaGhostLight_body_exited"]
[connection signal="body_entered" from="CloseArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="GhostDetect" to="." method="_on_GhostDetect_body_entered"]
